<package format="3">
  <name>master3_bt</name>
  <version>0.1.0</version>
  <description>
      Plazground for behaviortree
  </description>

  <maintainer email="cord.burmeister@live.de">marvin</maintainer>
  <license>Apache-2.0</license>
  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>btcpp_ros2_interfaces</depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
